# ComfyUI-GLOMAP

./: .gitignore  COLMAP_VERSION_INFO.txt  README.md  __init__.py  pyproject.toml  requirements.txt
build_tools/: .gitignore  compile_colmap_vfx.bat  patch_colmap_msvc.py
build_tools/overlay_ports/ceres/: portfile.cmake
core/: camera_converter.py  colmap_parser.py  colmap_runner.py  downloader_utils.py  frame_utils.py  gpu_utils.py  reprojection.py
example_workflows/: 4k_vfx_tracking.json  basic_camera_track.json
nodes/: camera_exporter.py  camera_tracker.py  downloader.py  pointcloud_export.py  tracking_preview.py
scripts/: blender_export.py  test_downloader.py
web/: glomap_setup.js
